<resources>
    <string name="app_name">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_artists">Artistas</string>
    <string name="title_collections">Coleccionistas</string>
    <string name="title_welcome">Bienvenido</string>
    <string name="button_collectors">COLECCIONISTA</string>
    <string name="button_visitors">VISITANTE</string>
    <string name="album_searchbar_hint">¿Qué quieres escuchar?</string>
    <string name="album_label">Álbum</string>
    <string name="album_genre_label">Género</string>
    <string name="album_releasedate_label">Fecha de estreno</string>
    <string name="album_record_label">Disquera</string>
...
    <string name="image_artist">Imagen del artista.</string>
    <string name="image_heart">Imagen corazón.</string>
    <string name="no_collectors_message">No hay coleccionistas para mostrar.</string>
    <string name="collector_searchbar_hint">¿A quién quieres buscar?</string>
    <string name="tabInformation">Información</string>
    <string name="tabSongs">Canciones</string>
    <string name="tabComments">Comentarios</string>
    <string name="welcomeText">Bienvenido</string>
    <string name="ivExit">Salir al menú principal</string>
    <string name="ivProfile">Avatar</string>
    <string name="ivArrowLeft">Devolverse</string>
    <string name="ivAccount">Cuenta</string>
    <string name="ivMainBackground">Artista cantando</string>
    <string name="ivGradient">Gradiente</string>
    <string name="ivAlbumItem">Imágen de álbum</string>
    <string name="ivHeart">Corazón</string>
    <string name="fabAddAlbum">Agregar álbum</string>
...
