<!-- res/layout/activity_album_detail.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.artists.BandDetailActivity">

    <ImageView
        android:id="@+id/back_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/ivArrowLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_arrow_left" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        android:textSize="22sp"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/artist_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/artist_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:shapeAppearanceOverlay="@style/RoundedSquare"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/artist_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/artist_description"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white" />

    <com.google.android.material.tabs.TabLayout
        android:layout_marginTop="20dp"
        android:background="@color/dark_gray"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorColor="@color/green"
        app:tabSelectedTextColor="@color/green"
        app:tabTextColor="@color/gray"
        android:id="@+id/tabLayoutArtistDetail"
        app:tabTextAppearance="@style/CustomTextAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/artist_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayoutArtistDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>